Bolick et al: How open access is crucial to ...

--- a/science/index.html
+++ b/science/index.html
@@ -1062,6 +1062,10 @@
 
     <h2>Unsorted Links</h2>
     <ul>
+      <li>Bolick, Josh; Emmett, Ada; Greenberg, Marc L.; Rosenblum, Brian; Peterson, A. Townsend:
+        <a href="https://kuscholarworks.ku.edu/handle/1808/22672">How open access is crucial to the future of science</a>,
+        <i class="journal">Journal of Wildlife Management</i>, 81 (2017): 564–566.
+      </li>
       <li>Lent, Jeremy:
         <a href="https://en.wikipedia.org/wiki/Jeremy_Lent#The_Patterning_Instinct"><i class="booktitle">The Patterning Instinct: A Cultural History of Humanity’s Search for Meaning</i></a>.
         Prometheus Books, 2017.
