Bayram & Akyurek: To steal or not to steal?

--- a/science/index.html
+++ b/science/index.html
@@ -1066,6 +1066,10 @@
         <a href="https://kuscholarworks.ku.edu/handle/1808/22672">How open access is crucial to the future of science</a>,
         <i class="journal">Journal of Wildlife Management</i>, 81 (2017): 564–566.
       </li>
+      <li>Bayram, Didem Kaya; Akyurek, Furkan:
+        <a href="https://www.trtworld.com/life/to-steal-or-not-to-steal-could-sci-hub-change-the-publishing-industry--16346">To steal or not to steal? Could Sci-hub change the publishing industry?</a>,
+        <i class="website"><abbr>TRT</abbr>World</i>, 30.03.2018.
+      </li>
       <li>Lent, Jeremy:
         <a href="https://en.wikipedia.org/wiki/Jeremy_Lent#The_Patterning_Instinct"><i class="booktitle">The Patterning Instinct: A Cultural History of Humanity’s Search for Meaning</i></a>.
         Prometheus Books, 2017.
