--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1302,7 +1302,7 @@
       </li>
       <li>Viroli, Maurizio:
         <i class="booktitle">Niccolò's Smile: A Biography of Machiavelli</i>. Translated by Antony Shugaar. Farrar, Strauss and Giroux, 2000.
-        <br />Orginally published as <i class="booktitle" lang="it">Il sorriso di Niccolò: Storia di Machiavelli</i> in 1998.
+        <br />Originally published as <i class="booktitle" lang="it">Il sorriso di Niccolò: Storia di Machiavelli</i> in 1998.
       </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
