--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1304,6 +1304,10 @@
         <i class="booktitle">Niccolò's Smile: A Biography of Machiavelli</i>. Translated by Antony Shugaar. Farrar, Strauss and Giroux, 2000.
         <br />Originally published as <i class="booktitle" lang="it">Il sorriso di Niccolò: Storia di Machiavelli</i> in 1998.
       </li>
+      <li>Black, Robert:
+        <i class="booktitle">Machiavelli</i>. Routledge, 2014. (380 pages)
+        <a href="https://www.routledge.com/Machiavelli/Black/p/book/9780582784062"><abbr>ISBN</abbr> 9780582784062</a>.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
