--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -150,6 +150,11 @@
       </li>
       <!--@@TODO: more links at bottom of https://www.marxists.org/deutsch/philosophie/hegel/index.htm -->
       <!--
+      <li>:
+        <i class="booktitle"></i>. ( pages)
+        <a href=""><abbr>ISBN</abbr> </a>.
+        <br />
+      </li>
       <li>
         <a href=""></a>
       </li>
@@ -158,6 +163,10 @@
 
     <h2>Links</h2>
     <ul>
+      <li>Beiser, Frederick C. (editor):
+        <i class="booktitle">The Cambridge Companion to Hegel</i>. Cambridge Companions to Philosophy. Cambridge University Press, 1993. (530 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/history-philosophy/cambridge-companion-hegel?format=PB"><abbr>ISBN</abbr> 9780521387118</a>.
+      </li>
       <li>Houlgate, Stephen:
         <a href="https://fivebooks.com/best-books/hegel-stephen-houlgate/">The best books on Hegel</a>,
         <i class="website">Five Books</i>, March 2018. Houlgate's recommendations are
