Beiser: Cambridge Companion to Hegel and ...

--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -167,6 +167,10 @@
         <i class="booktitle">The Cambridge Companion to Hegel</i>. Cambridge Companions to Philosophy. Cambridge University Press, 1993. (530 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/history-philosophy/cambridge-companion-hegel?format=PB"><abbr>ISBN</abbr> 9780521387118</a>.
       </li>
+      <li>Beiser, Frederick C. (editor):
+        <i class="booktitle">The Cambridge Companion to Hegel and Nineteenth-Century Philosophy</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2009. (448 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/philosophy/nineteenth-century-philosophy/cambridge-companion-hegel-and-nineteenth-century-philosophy?format=PB&isbn=9780521539388"><abbr>ISBN</abbr> 9780521539388</a>.
+      </li>
       <li>Houlgate, Stephen:
         <a href="https://fivebooks.com/best-books/hegel-stephen-houlgate/">The best books on Hegel</a>,
         <i class="website">Five Books</i>, March 2018. Houlgate's recommendations are
