--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -85,6 +85,10 @@
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/history-philosophy/cambridge-companion-marx?format=PB"><abbr>ISBN</abbr> 9780521366946</a>.
       </li>
     </ul>
+    <li>Carver, Terrell; Farr, James:
+      <i class="booktitle">The Cambridge Companion to The Communist Manifesto</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2015. (310 pages)
+      <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/history-ideas/cambridge-companion-communist-manifesto?format=PB"><abbr>ISBN</abbr> 9781107683075</a>.
+    </li>
     <!--
       <li>:
         <i class="booktitle"></i>. ( pages)
