Benner: Be Like the Fox (2017)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1308,6 +1308,20 @@
         <i class="booktitle">Machiavelli</i>. Routledge, 2014. (380 pages)
         <a href="https://www.routledge.com/Machiavelli/Black/p/book/9780582784062"><abbr>ISBN</abbr> 9780582784062</a>.
       </li>
+      <li>Benner, Erica:
+        <i class="booktitle">Be Like the Fox: Machiavelli's Lifelong Quest for Freedom</i>. Penguin, March 2017, 2018. (384 pages)
+        <a href="https://www.penguin.co.uk/books/188045/be-like-the-fox/9780141974859/"><abbr>ISBN</abbr> 9780141974859</a>.
+        <!--Also Norton, July 2018: http://books.wwnorton.com/books/978-0-393-35581-9/ -->
+      </li>
+      <!--
+        * N. Machiavelli: The Prince. Translated and edited by Robert M. Adams. Norton Critical Editions. 2nd edition. Norton, 1992: http://books.wwnorton.com/books/webad.aspx?id=11341 
+        * Alan Ryan: On Machiavelli: The Search for Glory. Norton, 2013: http://books.wwnorton.com/books/978-0-87140-705-4/ 
+        * Livy: The Rise of Rome: Books One to Five. Translated and edited by T. J. Luce. Oxford U P, 2008: https://global.oup.com/academic/product/the-rise-of-rome-9780199540044 
+        * Livy: Rome's Italian Wars: Books 6-10. J. C. Yardley and Dexter Hoyos. Oxford U P, 2013: https://global.oup.com/academic/product/romes-italian-wars-9780199564859 
+        * Livy: Hannibal's War: Books 21-30. Translated by J.C. Yardley and Edited by Dexter Hoyos. Oxford U P, 2009: https://global.oup.com/academic/product/hannibals-war-9780199555970 
+        * Livy: The Dawn of the Roman Empire: Books 31-40. Translated by J. C. Yardley and with introduction and notes by Waldemar Heckel. Oxford U P, 2009: https://global.oup.com/academic/product/the-dawn-of-the-roman-empire-9780199555680 
+        * Livy: Rome's Mediterranean Empire: Books 41-45 and the Periochae. Translated by Jane D. Chaplin. Oxford U P, 2009: https://global.oup.com/academic/product/romes-mediterranean-empire-9780199556021 
+      -->
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
