--- a/philosophy/hegel_gwf.html
+++ b/philosophy/hegel_gwf.html
@@ -210,6 +210,10 @@
         <a href="https://www.youtube.com/watch?v=H5JGE3lhuNo">Philosophy – Hegel</a>
         (YouTube, 7 minutes, 10.07.2015).
       </li>
+      <li>
+        <a href="https://philosophynow.org/podcasts/The_Ideas_of_GWF_Hegel">The Ideas of G.W.F. Hegel</a>,
+        <i class="magazine">Philosophy Now</i> (no date): a 50-minute podcast first broadcast in January 2012.
+      </li>
       <li lang="de">Stadtbibliothek Stuttgart:
         <a href="http://www1.stuttgart.de/stadtbibliothek/bvs/ausgabe.php?sid=205">Georg Wilhelm Friedrich Hegel</a>.
       </li>
