Leopold: The Young Karl Marx

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -89,6 +89,10 @@
       <i class="booktitle">The Cambridge Companion to The Communist Manifesto</i>. Cambridge Companions to Philosophy. Cambridge University Press, 2015. (310 pages)
       <a href="http://www.cambridge.org/de/academic/subjects/politics-international-relations/history-ideas/cambridge-companion-communist-manifesto?format=PB"><abbr>ISBN</abbr> 9781107683075</a>.
     </li>
+    <li>Leopold, David:
+      <i class="booktitle">The Young Karl Marx: German Philosophy, Modern Politics, and Human Flourishing</i>. Ideas in Context. Cambridge University Press, 2009. (340 pages)
+      <a href="http://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/young-karl-marx-german-philosophy-modern-politics-and-human-flourishing?format=PB"><abbr>ISBN</abbr> 9780521118262</a>.
+    </li>
     <!--
       <li>:
         <i class="booktitle"></i>. ( pages)
