Date 11th Science Day

--- a/science/hdm_scienceday.html
+++ b/science/hdm_scienceday.html
@@ -148,7 +148,7 @@
           <li><a href="http://events.mi.hdm-stuttgart.de/2017-12-22-10-science-day/The%20Shock%20Doctrine">The Shock Doctrine</a> (<span lang="nl">Christophe Strobbe</span>, 54 minutes, in English).</li>
         </ul>
       </li>
-      <li>Science Day May/June 2018: date to be determined. <!--Topics:
+      <li>11th Science: 29 June 2018. <!--Topics:
         <ul>
           <li></li>
           <li></li>
