Carver: Everyone knows about Karl Marx, ... Engels?

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -198,6 +198,10 @@
         <a href="https://socialistworker.co.uk/art/46512/Making+a+Marx+on+history+celebrating+200+years+since+Karl+Marxs+birth">Making a Marx on history—celebrating 200 years since Karl Marx's birth</a>,
         <i class="magazine">Socialist Worker</i>, issue 2602, 01.05.2018.
       </li>
+      <li>Carver, Terrell:
+        <a href="https://theconversation.com/everyone-knows-about-karl-marx-but-what-about-friedrich-engels-95241">Everyone knows about Karl Marx, but what about Friedrich Engels?</a>,
+        <i class="website">The Conversation</i>, 03.05.2018.
+      </li>
     </ul>
   </main>
 
