BR: Kant, Sophie und der kategorische Imperativ

--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -32,6 +32,7 @@
           <!--li><a href="../philosophy/religion.html">Religion and Faith</a></li-->
           <li class="active"><a href="../philosophy/kant.html" lang="de">Immanuel Kant</a></li>
           <li><a href="../philosophy/hegel_gwf.html">G.W.F. Hegel</a></li>
+          <li class="notyet"><a href="../philosophy/marx_karl.html" lang="de">Karl Marx</a></li>
         </ul>
       </li>
       <li><a href="../science/index.html">Science</a>
@@ -199,6 +200,10 @@
         <a href="https://www.uni-marburg.de/fb03/philosophie/mr_archiv" lang="de"><i class="journal">Marburger Archiv - Kant und die Aufklärung</a>
         at the <span lang="de">Philipps-Universität, Marburg</span>.
         <!--Old URL from H. Klemme's book http://www.uni-marburg.de/kant/ redirects here, April 2018-->
+      </li>
+      <li><span lang="de">
+        <a href="https://www.br.de/fernsehen/ard-alpha/sendungen/kant-fuer-anfaenger/der-kategorische-imperativ/kategorischer-imperativ100.html" hreflang="de">Kant, Sophie und der kategorische Imperativ</a>,
+        <i class="website">Bayerischer Rundfunk</i></span>, 26.03.2017.
       </li>
     </ul>
   </main>
