Yang: Translator's former residence now ...

--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -202,6 +202,10 @@
         <a href="https://theconversation.com/everyone-knows-about-karl-marx-but-what-about-friedrich-engels-95241">Everyone knows about Karl Marx, but what about Friedrich Engels?</a>,
         <i class="website">The Conversation</i>, 03.05.2018.
       </li>
+      <li>Yang, Meiping:
+        <a href="https://www.shine.cn/news/metro/1805074182/">Translator's former residence now a Communist Manifesto exhibition center</a>,
+        <i class="website">Shine</i>, 07.05.2018.
+      </li>
     </ul>
   </main>
 
