Errors in site nagivation.

--- a/science/index.html
+++ b/science/index.html
@@ -44,7 +44,7 @@
           <li><a href="../science/hdm_scienceday.html"><abbr>HdM</abbr> Science Day</a></li>
         </ul>
       </li>
-      <li><a href="../science/index.html">Humanities</a>
+      <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a>
           </li>
