--- a/philosophy/kant.html
+++ b/philosophy/kant.html
@@ -62,6 +62,10 @@
         <i class="article">Was ist Aufklärung</i>, 1784.
         </cite>
       </p>
+      <p lang="fr">
+        <q cite="https://fr.wikiquote.org/wiki/Charles_P%C3%A9guy#Victor-Marie,_comte_Hugo">Le kantisme a les mains pures&amp;; par malheur, il n'a pas de mains.</q>
+        <cite>Charles Péguy, <i class="booktitle">Victor-Marie, comte Hugo</i>.</cite>
+      </p>
     </blockquote>
 
     <p><a href="https://en.wikipedia.org/wiki/Immanuel_Kant"><span lang="de">Immanuel Kant</span></a>
