--- a/philosophy/marx_karl.html
+++ b/philosophy/marx_karl.html
@@ -206,6 +206,10 @@
         <a href="https://www.shine.cn/news/metro/1805074182/">Translator's former residence now a Communist Manifesto exhibition center</a>,
         <i class="website">Shine</i>, 07.05.2018.
       </li>
+      <li>Hunt, Tristram:
+        <a href="https://www.historytoday.com/tristram-hunt/no-marx-without-engels">No Marx without Engels</a>,
+        <i class="website">History Today</i>, Volume 59 Issue 4, April 2009.
+      </li>
     </ul>
   </main>
 
