Brown: The CEO of IDEO explains ...

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -523,6 +523,10 @@
         <a href="https://www.project-syndicate.org/commentary/algorithms-lead-to-chinese-style-communitarianism-by-mark-maccarthy-2018-05">The Politics of Machine-Learning Algorithms</a>,
         <i class="website">Project Syndicate</i>, 03.05.2018.
       </li>
+      <li>Brown, Tim:
+        <a href="https://qz.com/1260943/the-ceo-of-ideo-explains-how-your-creative-capacity-is-the-key-to-surviving-automation/">The <abbr>CEO</abbr> of IDEO explains how your “creative capacity” is the key to surviving automation</a>,
+        <i class="website">Quartz</i>, 08.05.2018.
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
