Hulliung: Citizen Machiavelli (2014)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1322,6 +1322,12 @@
         * Livy: The Dawn of the Roman Empire: Books 31-40. Translated by J. C. Yardley and with introduction and notes by Waldemar Heckel. Oxford U P, 2009: https://global.oup.com/academic/product/the-dawn-of-the-roman-empire-9780199555680 
         * Livy: Rome's Mediterranean Empire: Books 41-45 and the Periochae. Translated by Jane D. Chaplin. Oxford U P, 2009: https://global.oup.com/academic/product/romes-mediterranean-empire-9780199556021 
       -->
+      <li>Hulliung, Mark:
+        <i class="booktitle">Citizen Machiavelli</i>. Routledge, 2014. (268 pages)
+        <a href="https://www.routledge.com/Citizen-Machiavelli/Hulliung/p/book/9781412854054"><abbr>ISBN</abbr> 9781412854054</a>.
+        <br />From the publisher's description:
+        <q>Machiavelli has been viewed as the forerunner of the humanists of our day, liberals and socialists, who have discovered that moral ends sometimes require immoral means. Against this interpretation, Mark Hulliung argues that Machiavelli's "humanism," was rooted in classical notions of grandeur and greatness, and that his prime reason for admiring the ancient Roman republic was that it conquered the world. In short, Machiavelli was at his most Machiavellian precisely when he voiced his "civic humanism."</q>
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
