Najemy: Cambridge Companion to Machiavelli

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1328,6 +1328,10 @@
         <br />From the publisher's description:
         <q>Machiavelli has been viewed as the forerunner of the humanists of our day, liberals and socialists, who have discovered that moral ends sometimes require immoral means. Against this interpretation, Mark Hulliung argues that Machiavelli's "humanism," was rooted in classical notions of grandeur and greatness, and that his prime reason for admiring the ancient Roman republic was that it conquered the world. In short, Machiavelli was at his most Machiavellian precisely when he voiced his "civic humanism."</q>
       </li>
+      <li>Najemy, John M., editor:
+        <i class="booktitle">The Cambridge Companion to Machiavelli</i>. Cambridge Companions to Literature. Cambridge University Press, 2010. (306 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/literature/european-literature/cambridge-companion-machiavelli?format=PB"><abbr>ISBN</abbr> 9780521678469</a>.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
