UNESCO World Philosophy Day: URL updated

--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
     <h2 id="philoday">World Philosophy Day</h2>
     <p> 
       <abbr>UNESCO</abbr> established the 
-      <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/philosophy/philosophy-day-at-unesco/">World Philosophy Day</a></strong> in 2005. 
+      <strong><a href="http://www.unesco.org/new/en/social-and-human-sciences/themes/most-programme/humanities-and-philosophy/philosophy-day-at-unesco/">World Philosophy Day</a></strong> in 2005.
+      <!--Old URL: http://www.unesco.org/new/en/social-and-human-sciences/themes/philosophy/philosophy-day-at-unesco/ -->
       The event is celebrated each year on the third Thursday of November.
       In 2016, 
       <a href="http://www.unesco.org/new/en/unesco/events/prizes-and-celebrations/celebrations/international-days/world-philosophy-day-2016/">World Philosophy Day</a>
@@ -177,6 +178,23 @@
       * Gisela Kaplan; Lesley Rogers: Gene Worship: Moving Beyond the Nature/ Nurture Debate Over Genes, Brain and Gender. Other Press [?], 2010.
       * Cordelia Fine: Delusions of Gender: How Our Minds, Society, and Neurosexism Create Difference. W. W. Norton & Company, 2011.
       * Sally Satel; Scott O. Lilienfeld: Brainwashed: The Seductive Appeal of Mindless Neuroscience. Basic Books, 2015 (rept). 
+    -->
+    <!--Complex systems:
+      * John J. Holland: Complexity: A Very Short Introduction. OUP, 2014.
+      * Ludwig Von Bertalanffy: General System Theory: Foundations, Development, Applications. George Braziller, 1969. http://georgebraziller.squarespace.com/general-systems-theory/?rq=general%20system%20theory
+      * Rajesh R Parwani: Simplicity in Complexity: An Introduction to Complex Systems. Simplicity Research Institute, 2015. supplementary materials: http://www.simplicitysg.net/books/sic 
+      * Donella Meadows: Thinking in Systems: a Primer. Chelsea Green Publishing Co, 2015 [??]
+      * Linda Booth Sweeney; Dennis Meadows: The Systems Thinking Playbook: Exercises to Stretch and Build Learning and Systems Thinking Capabilities. Chelsea Green Publishing Co, 2010
+      * Robert B. Northrop: Introduction to Complexity and Complex Systems. CRC Press, 2017.
+      * Melanie Mitchell: Complexity: A Guided Tour. OUP, 2011. (bad academic prose?)
+      * Chiang H. Ren: How Systems Form and How Systems Break: A Beginner's Guide for Studying the World. Springer, 2016.
+      * John H. Miller; Scott E. Page: Complex Adaptive Systems: An Introduction to Computational Models of Social Life. Princeton Studies in Complexity. Princeton UP, 2007.
+      * John Miller: A Crude Look at the Whole: The Science of Complex Systems in Business, Life, and Society. Basic Books, 2016.
+      * Fritjof Capra; Pier Luigi Luisi: The Systems View of Life: A Unifying Vision. Cambridge UP, 2016.
+      * David Peter Stroh: Systems Thinking for Social Change: A Practical Guide to Solving Complex Problems, Avoiding Unintended Consequences, and Achieving Lasting Results. Chelsea Green Publishing Co, 2015.
+      * Philip W. Anderson, et al, eds.: The Economy As An Evolving Complex System. Westview Press, 1988. (Collection of papers from a ten-day seminar.)
+      * Robert W. Proctor; Trisha Van Zandt: Human Factors in Simple and Complex Systems. Third edition, CRC Press, 2017.
+      * Nick C. Ellis; Diane Larsen-Freeman, eds.: Language as a Complex Adaptive System. Language Learning Cognitive Neuroscience Series. Wiley-Blackwell, 2009.
     -->
   </main>
 
