Bloom: How to Read and Why.

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -540,6 +540,12 @@
           </li>
         </ul>
       </li>
+      <li>Bloom, Harold:
+        <i class="booktitle">How to Read and Why</i>. Scribner&nbsp;/ Simon &amp; Schuster, 2001. (288 pages)
+        <a href="http://www.simonandschuster.com/books/How-to-Read-and-Why/Harold-Bloom/9780684859071"><abbr>ISBN</abbr> 9780684859071</a>.
+        <br />From the publisher's blurb:
+        <q>For more than forty years, Bloom has transformed college students into lifelong readers with his unrivaled love for literature. Now, at a time when faster and easier electronic media threatens to eclipse the practice of reading, Bloom draws on his experience as critic, teacher, and prolific reader to plumb the great books for their sustaining wisdom.</q>
+      </li>
       <li>Gimson, Sally:
         <a href="http://journals.sagepub.com/doi/full/10.1177/0306422018770095">Who controls the past controls the future…: Fall in line or be in the firing line is the message historians are receiving from governments around the world</a>,
         <i class="website">Index on Censorship</i>, 09.04.2018.
