--- a/science/index.html
+++ b/science/index.html
@@ -1184,6 +1184,10 @@
         <i class="journal">Journal of Economic Perspectives</i>, 32.1 (2018): 179-94.
         <!--@@PDF-->
       </li>
+      <li>Pigliucci, Massimo:
+        <a href="http://nautil.us/blog/the-case-for-more-science-and-philosophy-books-for-children">The Case for More Science and Philosophy Books for Children</a>,
+        <i class="blog">Nautilus blog</i>, 21.07.2017.
+      </li>
     </ul>
 
     <p>Economics:</p>
