--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1332,6 +1332,11 @@
         <i class="booktitle">The Cambridge Companion to Machiavelli</i>. Cambridge Companions to Literature. Cambridge University Press, 2010. (306 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/literature/european-literature/cambridge-companion-machiavelli?format=PB"><abbr>ISBN</abbr> 9780521678469</a>.
       </li>
+      <li>Raab, Felix:
+        <i class="booktitle">The English Face of Machiavelli: A Changing Reputation 1500 – 1700</i>. Routledge Library Editions: Political Science Volume 32. Routledge, 2010. (316 pages)
+        <a href="https://www.routledge.com/The-English-Face-of-Machiavelli-Routledge-Library-Editions-Political/Raab/p/book/9780415851091"><abbr>ISBN</abbr> 9780415851091</a>.
+      </li>
+      <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/ -->
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
