--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1073,12 +1073,12 @@
       <li>Thorburn, William:
         <a href="http://www.logicmuseum.com/authors/other/mythofockham.htm">The Myth of Ockham's Razor</a>,
         <i class="journal">Mind</i>, 2 (1918): 345-353.
-        <!-- @@to PDF! -->
+        <!--@@to PDF!-->
       </li>
       <li>Sober, Elliott (University of Wisconsin, Madison): 
         <i class="booktitle">Ockham's Razors: A User's Manual</i>. Oxford University Press, 2015..
         <a href="http://www.cambridge.org/de/academic/subjects/philosophy/philosophy-science/ockhams-razors-users-manual?format=PB"><abbr>ISBN</abbr> 9781107692534</a>.
-        <!-- @@check excerpt -->
+        <!--@@check excerpt-->
       </li>
       <li><a href="https://en.wikipedia.org/wiki/Morgan%27s_Canon">Morgan's Canon</a>,
         a specific case of the principle of parsimony.
@@ -1086,6 +1086,12 @@
     </ul>
 
     <h2>Specific Philosophers</h2>
+    <p>See also the pages about
+      <a href="kant.html">Immanuel Kant</a>,
+      <a href="hegel_gwf.html">G. W. F. Hegel</a>
+      and
+      <a href="marx_karl.html">Karl Marx</a>.
+    </p>
     <h3>David Hume (1711 – 1776)</h3>
     <ul>
       <li>Simon Blackburn:
