--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1353,6 +1353,10 @@
         <i class="booktitle">Machiavelli and Republicanism</i>. Ideas in Context. Cambridge University Press, 1993. (332 pages)
         <a href="http://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/machiavelli-and-republicanism?format=PB"><abbr>ISBN</abbr> 9780521435895</a>.
       </li>
+      <li>Skinner, Quentin:
+        <i class="booktitle">The Foundations of Modern Political Thought. Volume 1. The Renaissance</i>. Cambridge University Press, 1979. (330 pages)
+        <a href="http://www.cambridge.org/de/academic/subjects/history/history-ideas-and-intellectual-history/foundations-modern-political-thought-volume-1?format=PB"><abbr>ISBN</abbr> 9780521293372</a>.
+      </li>
       <li>
         <a href="https://www.youtube.com/watch?v=163CxqQpqAM">Is Machiavelli's "The Prince" Still Relevant? Modern Philosophy and Leadership - Analysis</a>,
         1999 (YouTube, 58 minutes).
