The Prince & mirrors for princes literature

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1405,6 +1405,14 @@
         <a href="https://en.wikipedia.org/wiki/Benvenuto_Cellini#Autobiography"><i class="booktitle">Autiobiography</i></a> (1558–1563).
       </li>
       <!-- https://www.youtube.com/watch?v=u2FANdhTDyI 10. New Modes and Orders: Machiavelli's The Prince (chaps. 1-12)  - YaleCourses -->
+      <li><i class="booktitle">The Prince</i> (1513) was written three years before 
+        <a href="https://en.wikipedia.org/wiki/The_Education_of_a_Christian_Prince"><i class="booktitle">The Education of a Christian Prince</i></a>
+        by Erasmus and Thomas More's
+        <a href="https://en.wikipedia.org/wiki/Utopia_(book)"><i class="booktitle">Utopia</i></a>.
+        See also the genre
+        <a href="https://en.wikipedia.org/wiki/Mirrors_for_princes">mirrors for princes</a>
+        (German <a href="https://de.wikipedia.org/wiki/F%C3%BCrstenspiegel" hreflang="de" lang="de">Fürstenspiegel</a>.
+      </li>
       <li lang="de">Roeck, Bernd:
         <i class="booktitle">Der Morgen der Welt. Geschichte der Renaissance</i>. C. H. Beck, 2017.
         <a href="https://www.chbeck.de/roeck-morgen-welt/product/16572675"><abbr>ISBN</abbr> 978-3-406-69876-7</a>.
