Loconte: In Praise of Folly (Trump & Machiavelli)

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1437,6 +1437,13 @@
         <a href="https://www.chbeck.de/muenkler-strassenberger-politische-theorie-ideengeschichte/product/30082"><abbr>ISBN</abbr> 978-3-406-59985-9</a>.
         <!--https://hpd.de/artikel/politische-theorie-und-ideengeschichte-zur-einfuehrung-12813-->
       </li>
+      <li>Loconte, Joseph (associate professor of history at the King’s College in New York City):
+        <a href="https://www.weeklystandard.com/in-praise-of-folly/article/2011156">In Praise of Folly</a>,
+        <i class="website">The Weekly Standard</i>, 15.01.2018 (four-minute read).
+        <br />First sentence:
+        <q>The presidency of Donald Trump, nearly a year old, has revived a political debate that began in earnest in sixteenth-century Europe: does a nation require leaders of good moral character in order to flourish?</q>
+        <!--@@PDF-->
+      </li>
     </ul>
 
     <h2 id="language">Language</h2>
