--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -129,6 +129,15 @@
       </li>
       <!--@@ https://duckduckgo.com/?q=ethics+science+research&ia=web -->
     </ul>
+
+    <h2>Other Links</h2>
+    <ul>
+      <li>Curry, Oliver Scott:
+        <a href="https://evolution-institute.org/the-seven-moral-rules-found-all-around-the-world/">Seven Moral Rules Found All Around the World</a>,
+        <i class="website">The Evolution Institute</i>, 02.03.2012.
+        <!--@@check PDF download-->
+      </li>
+    </ul>
   </main>
 
   <footer>
