Rasmussen: The Infidel and the Professor (2017)

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1149,13 +1149,17 @@
         <a href="https://www.youtube.com/watch?v=gMBgnAINT1o">three favourite philosophers of Nigel Warburton</a>
         (the others being Socrates and John Stuart Mill).
       </li>
-      <li>Geoff Haselhurst:
+      <li>Haselhurst, Geoff:
         <a href="http://www.spaceandmotion.com/Philosophy-David-Hume-Philosopher.htm">David Hume</a>,
         <i class="website">On Truth &amp; Reality: The Wave Structure of Matter (<abbr>WSM</abbr>) in Space</i>.
       </li>
-      <li>Cody Delistraty:
+      <li>Delistraty, Cody:
         <a href="http://nautil.us/blog/why-david-hume-is-so-hot-right-now">Why David Hume Is So Hot Right Now</a>,
         <i class="website">Nautilus</i>, 30.05.2016.
+      </li>
+      <li>Rasmussen, Dennis C.:
+        <i class="booktitle">The Infidel and the Professor: David Hume, Adam Smith, and the Friendship That Shaped Modern Thought</i>. Princeton University Press, 2017. (336 pages)
+        <a href="https://press.princeton.edu/titles/11092.html"><abbr>ISBN</abbr> 9780691177014</a>.
       </li>
     </ul>
     <!-- Daniel Dennett: "Hume's Strange Inversion of Reasoning", Moscow State University in June 2012: https://www.youtube.com/watch?v=wY9Xm5xgiEE (not mainly focused on Hume, actually) See also https://www.youtube.com/watch?v=cesVHCzw22E -->
