Singer on Nineteenth-Century Philosophy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1526,6 +1526,17 @@
           <li><a href="https://en.wikipedia.org/wiki/Hello_America"><i class="booktitle">Hello America</i> (1981) by J. G. Ballard.</li>
         </ul>
       </li>
+      <li>Singer, Peter:
+        <a href="https://fivebooks.com/best-books/nineteenth-century-philosophy-peter-singer/">Peter Singer on Nineteenth-Century Philosophy</a>
+        <i class="website">Five Books</i> (May 2018). Peter Singer introduces five highlights from nineteenth-century philosophy.
+        <ul>
+          <li><i class="booktitle">Phenomenology of the Spirit</i> (1807) by G. W. F. Hegel,</li>
+          <li><i class="booktitle">The Communist Manifesto</i> (1848) by Karl Marx and Friedrich Engels,</li>
+          <li><i class="booktitle">On Liberty</i> (1859) by John Stuart Mill,</li>
+          <li><i class="booktitle">The Origin of Species</i> (1859) by Charles Darwin and</li>
+          <li><i class="booktitle">The Methods of Ethics</i> (1907 edition) by Henry Sidgwick.</li>
+        </ul>
+      </li>
       <li>Monbiot, George:
         <a href="https://fivebooks.com/best-books/george-monbiot-essential-reading-list/">George Monbiot — with An Essential Reading List</a>,
         <i class="website">Five Books</i> (March 2018). Monbiot recommends the following books:
