--- a/philosophy/thinking.html
+++ b/philosophy/thinking.html
@@ -306,6 +306,10 @@
         <i class="blog">Log base 2</i>, 11.01.2009.
         <!--@@PDF-->
       </li>
+      <li>Wright, Robert:
+        <a href="https://www.wired.com/story/sam-harris-and-the-myth-of-perfectly-rational-thought/">Sam Harris and the Myth of Perfectly Rational Thought</a>,
+        <i class="magazine">Wired</i>, 17.05.2018.
+      </li>
       <!-- 
         "False analogy" in the Skeptic's Dictionary: http://skepdic.com/falseanalogy.html 
         "False analogy" (Siris blog): http://branemrys.blogspot.de/2009/07/false-analogy.html
