Pieper: Einführung in die Ethik

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -69,6 +69,19 @@
         <a href="http://www.bbc.co.uk/ethics/introduction/">Introduction to ethics</a>
         (archived content).
       </li>
+      <li><span lang="de"> Pieper, Annemarie :
+        <i class="booktitle">Einführung in die Ethik</i>. 7. Auflage. A. Francke, 2017.</span>
+        <a href="http://www.utb-shop.de/einfuhrung-in-die-ethik-9683.html"><abbr>ISBN</abbr> 9783825246969</a>.
+      </li>
+      <!--
+      <li>
+        <a href=""></a>
+      </li>
+      <li>:
+        <i class="booktitle"></i>.
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
     </ul>
 
     <h2>Ethics or Morality Without Religion</h2>
