Höffe: Einführung in die utilitaristische Ethik

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -73,6 +73,10 @@
         <i class="booktitle">Einführung in die Ethik</i>. 7. Auflage. A. Francke, 2017.</span>
         <a href="http://www.utb-shop.de/einfuhrung-in-die-ethik-9683.html"><abbr>ISBN</abbr> 9783825246969</a>.
       </li>
+      <li><span lang="de">Höffe, Otfried:
+        <i class="booktitle">Einführung in die utilitaristische Ethik. Klassische und zeitgenössische Texte</i>. 5. überarbeitete und erweiterte Auflage. A. Francke, 2013</span>.
+        <a href="http://www.utb-shop.de/einfuhrung-in-die-utilitaristische-ethik.html"><abbr>ISBN</abbr> 9783825239855</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
