Shafer-Landau: Ethical Theory

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -77,6 +77,10 @@
         <i class="booktitle">Einführung in die utilitaristische Ethik. Klassische und zeitgenössische Texte</i>. 5. überarbeitete und erweiterte Auflage. A. Francke, 2013</span>.
         <a href="http://www.utb-shop.de/einfuhrung-in-die-utilitaristische-ethik.html"><abbr>ISBN</abbr> 9783825239855</a>.
       </li>
+      <li>Shafer-Landau, Russ (editor):
+        <i class="booktitle">Ethical Theory: An Anthology</i>. Second edition. Wiley-Blackwell, 2012. (816 pages)
+        <a href="https://www.wiley.com/en-gb/Ethical+Theory%3A+An+Anthology%2C+2nd+Edition-p-9780470671603"><abbr>ISBN</abbr> 978-0-470-67160-3</a>.
+      </li>
       <!--
       <li>
         <a href=""></a>
@@ -155,7 +159,7 @@
         <!--@@check PDF download-->
       </li>
     </ul>
-  </main>
+  </main>                           
 
   <footer>
     <p class="licence">
