Review Ethics withot Morals in Philosophy Now

--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -158,6 +158,15 @@
         <i class="website">The Evolution Institute</i>, 02.03.2012.
         <!--@@check PDF download-->
       </li>
+      <li>Marks, Joel:
+        <i class="booktitle">Ethics without Morals: In Defence of Amorality</i>. Routledge, 2013. (134 pages)
+        <a href="https://www.routledge.com/Ethics-without-Morals-In-Defence-of-Amorality/Marks/p/book/9780415635561"><abbr>ISBN</abbr> 9781138845107</a>.
+        <br />See also the following reviews:
+        Meacham, William: <a href="http://www.bmeacham.com/whatswhat/MarksReview.html">Review: Ethics Without Morals by Joel Marks</a> (2014;
+        see also <a href="https://philosophynow.org/issues/103/Ethics_Without_Morals_by_Joel_Marks"><i class="magazine">Philosophy Now</i></a>);
+        Schroeder, Timothy: <a href="https://ndpr.nd.edu/news/ethics-without-morals-in-defence-of-amorality/">Ethics Without Morals: In Defence of Amorality</a>
+        (<i class="website">Notre Dame Philosophical Reviews</i>, 16.12.2012.
+      </li>
     </ul>
   </main>                           
 
