MacLean: Democracy in Chains

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2417,6 +2417,10 @@
         <q>Sierra Club Executive Director Michael Brune says that both proposals will create more pollution and exacerbate climate change, serving fossil fuel donors' interests at the expense of the environment</q>.
         The proposed budget also aims to increase military spending even more.
       </li>
+      <li>MacLean, Nancy:
+        <i class="booktitle">Democracy in Chains: The Deep History of the Radical Right's Stealth Plan for America</i>. Penguin RandomHouse, 2017 (hardcover), June 2018 (paperback).
+        <a href="https://www.penguinrandomhouse.com/books/533763/democracy-in-chains-by-nancy-maclean/9781101980972"><abbr>ISBN</abbr> 9781101980972</a>.
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
