--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -2443,6 +2443,10 @@
           -->
         </ul>
       </li>
+      <li>Isaac, Jeffrey C.:
+        <a href="http://www.publicseminar.org/againsttrump-notes-from-year-one/"><i class="booktitle">#AgainstTrump: Notes from Year One</i></a>.
+        <!--@@get book-->
+      </li>
     </ul>
     <!-- 
       * The Ring of Fire: "Trump Wants To Cut Aide To American Children To Pay For Tax Cuts For The Wealthy", 4 minutes, 17.12.2017: https://www.youtube.com/watch?v=6nY-Tul5fYE
