--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1771,6 +1771,10 @@
         <a href="https://aeon.co/essays/against-guilty-pleasures-adorno-on-the-crimes-of-pop-culture">Against popular culture</a>,
         <i class="magazine">Aeon</i>, 20.02.2018.
       </li>
+      <li>Pinker, Steven:
+        <i class="booktitle">Enlightenment Now: A Manifesto for Science, Reason, Humanism, and Progress</i>. Penguin / Allen Lane, 2017. (256 pages)
+        <a href="https://www.penguin.co.uk/books/267227/enlightenment-now/9780241337011/"><abbr>ISBN</abbr> 9780241337011</a>.
+      </li>
       <li lang="de">Habermas, Jürgen:
         <a href="http://www.logbuch-suhrkamp.de/juergen-habermas/durch-die-bibliothek-habermas/">Durch die Bibliothek …</a>,
         <i class="blog">Logbuch Suhrkamp</i>, 09.03.2018.
