Articles about Pinke's book Englightenment Now

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1774,6 +1774,21 @@
       <li>Pinker, Steven:
         <i class="booktitle">Enlightenment Now: A Manifesto for Science, Reason, Humanism, and Progress</i>. Penguin / Allen Lane, 2017. (256 pages)
         <a href="https://www.penguin.co.uk/books/267227/enlightenment-now/9780241337011/"><abbr>ISBN</abbr> 9780241337011</a>.
+        <br />See also:
+        <ul>
+          <li>
+            <a href="https://en.wikipedia.org/wiki/Enlightenment_Now">Enlightenment Now</a>
+            (Wikipedia).
+          </li>
+          <li>Wootton, David:
+            <a href="https://www.the-tls.co.uk/articles/public/comfort-history-enlightenment-now/amp/">Comfort History</a>,
+            <i class="magazine">Times Literary Supplement</i>, 14.02.2018.
+          </li>
+          <li>Ball, Philip:
+            <a href="https://www.prospectmagazine.co.uk/magazine/steven-pinkers-new-book-is-a-compelling-new-manifesto-for-optimism">Steven Pinker’s new book is a compelling manifesto for optimism</a>,
+            <i class="magazine">Prospect</i>, March 2018 (online 21.02.2018).
+          </li>
+        </ul>
       </li>
       <li lang="de">Habermas, Jürgen:
         <a href="http://www.logbuch-suhrkamp.de/juergen-habermas/durch-die-bibliothek-habermas/">Durch die Bibliothek …</a>,
