--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1786,6 +1786,11 @@
             <i class="website">Reason</i>, 22.03.2018.
             This web page contains a video with an interview with Steven Pinker.
           </li>
+          <li>Pinker, Steven:
+            <a href="https://www.youtube.com/watch?v=ENHqT8s7Hic">Enlightenment Now</a>
+            (YouTube, 55 minutes): video of a talk at the 
+            <abbr title="Royal Society for the encouragement of Arts, Manufactures and Commerce">RSA</abbr> streamed on 22 February 2018.
+          </li>
           <li>Wootton, David:
             <a href="https://www.the-tls.co.uk/articles/public/comfort-history-enlightenment-now/amp/">Comfort History</a>,
             <i class="magazine">Times Literary Supplement</i>, 14.02.2018.
