Pinker & Fry: Enlightenment Today. How to: Academy

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1791,6 +1791,10 @@
             (YouTube, 55 minutes): video of a talk at the 
             <abbr title="Royal Society for the encouragement of Arts, Manufactures and Commerce">RSA</abbr> streamed on 22 February 2018.
           </li>
+          <li>Pinker, Steven; Fry, Stephen:
+            <a href="https://www.youtube.com/watch?v=8aT61w3Q6vI">Stephen Fry &amp; Steven Pinker on the Enlightenment Today</a>
+            (YouTube, 79 minutes, 24.02.2018): video of an interview published by <i>How to: Academy</i>.
+          </li>
           <li>Wootton, David:
             <a href="https://www.the-tls.co.uk/articles/public/comfort-history-enlightenment-now/amp/">Comfort History</a>,
             <i class="magazine">Times Literary Supplement</i>, 14.02.2018.
