Did the Sokal affair 'destroy postmodernism'?

--- a/philosophy/index.html
+++ b/philosophy/index.html
@@ -1344,9 +1344,9 @@
         <a href="https://www.youtube.com/watch?v=g1IrwEzMzxg">A Physicist Looks at 
         Idealism and Relativism</a>, a 90-minute lecture at the 
         <span lang="fr">Université Catholique de Louvain</span> in Belgium
-        on 6 June 2014.<!-- according to http://internationalpoliticshq.com/watch/jean-bricmont-a-physicist-looks-at-idealism-and-relativism.html -->.
+        on 6 June 2014.<!--according to http://internationalpoliticshq.com/watch/jean-bricmont-a-physicist-looks-at-idealism-and-relativism.html -->
       </li>
-      <li>Richard Dawkins: 
+      <li>Richard Dawkins:
         <a href="https://www.youtube.com/watch?v=V2BndTZOQxM">Feminism Invading Science</a>.
         This is an excerpt from a lecture that Dawkins gave at the 
         <a href="http://ffrf.org/outreach/item/16026-convention-2012-recap">Freedom 
@@ -1369,6 +1369,11 @@
         <i class="booktitle">A House Built on Sand: Exposing Postmodernist Myths About Science</i>.
         Oxford University Press, 2000. (336 p.)
         <a href="https://global.oup.com/academic/product/a-house-built-on-sand-9780195117264?lang=en&cc=de"><abbr>ISBN</abbr> 9780195117264</a>.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=Rnmfe6qskRY">Did the Sokal affair "destroy postmodernism"?</a>
+        (YouTube, 10 minutes, 21.05.2018).
+        <!--@@rewatch; see also comment at https://www.youtube.com/watch?v=Rnmfe6qskRY&lc=UgzvM-MIbUrYrt5lvJ14AaABAg -->
       </li>
     </ul>
 
