--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -153,6 +153,12 @@
 
     <h2>Other Links</h2>
     <ul>
+      <li>
+        <a href="http://www.ethics.be/ethics/index.php?LAN=E">Ethics.be (English)</a>&nbsp;/
+        <a href="http://www.ethics.be/ethics/index.php?LAN=N" hreflang="nl">Ethics.be (Nederlands)</a>:
+        websites that describes itself as
+        <q>the Belgian reference point for ethical-related issues and research</q>.
+      </li>
       <li>Curry, Oliver Scott:
         <a href="https://evolution-institute.org/the-seven-moral-rules-found-all-around-the-world/">Seven Moral Rules Found All Around the World</a>,
         <i class="website">The Evolution Institute</i>, 02.03.2012.
