--- a/philosophy/ethics.html
+++ b/philosophy/ethics.html
@@ -148,6 +148,11 @@
       <li>Ethicsweb:
         <a href="http://www.ethicsweb.eu/node/122">What is ethics in science?</a>
       </li>
+      <li>
+        <a href="http://www.wetenschap-en-ethiek.be/" hreflang="nl" lang="nl">Wetenschap en ethiek</a>:
+        website of a project on science and ethics at the KU Leuven in Belgium,
+        with yearly debates and activities since 2006.
+      </li>
       <!--@@ https://duckduckgo.com/?q=ethics+science+research&ia=web -->
     </ul>
 
@@ -155,9 +160,11 @@
     <ul>
       <li>
         <a href="http://www.ethics.be/ethics/index.php?LAN=E">Ethics.be (English)</a>&nbsp;/
-        <a href="http://www.ethics.be/ethics/index.php?LAN=N" hreflang="nl">Ethics.be (Nederlands)</a>:
+        <a href="http://www.ethics.be/ethics/index.php?LAN=N" hreflang="nl" lang="nl">Ethics.be (Nederlands)</a>:
         websites that describes itself as
         <q>the Belgian reference point for ethical-related issues and research</q>.
+      </li>
+      <li>
       </li>
       <li>Curry, Oliver Scott:
         <a href="https://evolution-institute.org/the-seven-moral-rules-found-all-around-the-world/">Seven Moral Rules Found All Around the World</a>,
