Selected Letters fo Alessandra Strozzi

--- a/science/hdm_scienceday_ideas.html
+++ b/science/hdm_scienceday_ideas.html
@@ -1326,7 +1326,12 @@
         <i class="booktitle">Citizen Machiavelli</i>. Routledge, 2014. (268 pages)
         <a href="https://www.routledge.com/Citizen-Machiavelli/Hulliung/p/book/9781412854054"><abbr>ISBN</abbr> 9781412854054</a>.
         <br />From the publisher's description:
-        <q>Machiavelli has been viewed as the forerunner of the humanists of our day, liberals and socialists, who have discovered that moral ends sometimes require immoral means. Against this interpretation, Mark Hulliung argues that Machiavelli's "humanism," was rooted in classical notions of grandeur and greatness, and that his prime reason for admiring the ancient Roman republic was that it conquered the world. In short, Machiavelli was at his most Machiavellian precisely when he voiced his "civic humanism."</q>
+        <q>Machiavelli has been viewed as the forerunner of the humanists of our day, liberals and socialists,
+          who have discovered that moral ends sometimes require immoral means.
+          Against this interpretation, Mark Hulliung argues that Machiavelli's "humanism," was rooted in classical notions of grandeur and greatness,
+          and that his prime reason for admiring the ancient Roman republic was that it conquered the world.
+          In short, Machiavelli was at his most Machiavellian precisely when he voiced his "civic humanism."
+        </q>
       </li>
       <li>Najemy, John M., editor:
         <i class="booktitle">The Cambridge Companion to Machiavelli</i>. Cambridge Companions to Literature. Cambridge University Press, 2010. (306 pages)
@@ -1337,6 +1342,13 @@
         <a href="https://www.routledge.com/The-English-Face-of-Machiavelli-Routledge-Library-Editions-Political/Raab/p/book/9780415851091"><abbr>ISBN</abbr> 9780415851091</a>.
       </li>
       <!--Philip Bobbitt: The Garments of Court and Palace. Atlantic Books, 2015. ISBN 9781843546894: https://atlantic-books.co.uk/book/the-garments-of-court-and-palace/ -->
+      <li>Strozzi, Alessandra Macinghi:
+        <i class="booktitle">Selected Letters of Alessandra Strozzi. Bilingual Edition</i>. Translated with an introduction and notes by Heather Gregory. University of California Press, 1997.
+        <abbr>ISBN</abbr> 978-0-520-20390-7.
+        <!--DG 737.58-->
+        <br /><a href="https://en.wikipedia.org/wiki/Alessandra_Macinghi_Strozzi">Alessandra Macinghi Strozzi</a>
+        (1407? – March 1471) married a member of the prestigious Strozzi family in Florence.
+      </li>
       <li>Mansfield, Harvey:
         <a href="https://www.youtube.com/watch?v=hVnh4woNXFg">Harvey Mansfield on Niccolò Machiavelli and the Origins of Modernity</a>,
         interview by Bill Kristoll (YouTube, 67 minutes, uploaded on 6 December 2015.)
